K8s/frontend/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: default
  labels:
    app: frontend
spec:
  replicas: 1
  revisionHistoryLimit: 15
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: gitlab.praktikum-services.ru:5050/std-017-006/momo-store/momo-frontend:latest
        imagePullPolicy: Always
        resources:
          requests:
            memory: "512Mi"
            cpu: "100m"
          limits:
            memory: "1024Mi"
            cpu: "200m"
        volumeMounts:
        - name: nginx-conf
          mountPath: /etc/nginx/conf.d/default.conf
          subPath: default.conf
          readOnly: true
        ports:
        - name: frontend
          containerPort: 80
        livenessProbe:
            httpGet:
              path: /
              port: 80
      imagePullSecrets:
      - name: docker-config-secret
      volumes:
      - name: nginx-conf
        configMap:
          name: nginx-conf
          items:
          - key: nginx.conf
            path: default.conf
