K8s/frontend/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  tls:
  - hosts:
    - "saman-store.ru"
    secretName: letsencrypt
  rules:
  - host: "saman-store.ru"
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
